Modified swagger doc
